[gd_scene load_steps=2 format=3 uid="uid://bj6qi60kpfb1w"]

[ext_resource type="Script" path="res://Chat.gd" id="1_w611t"]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 0

[node name="Chat" type="Panel" parent="."]
layout_mode = 0
offset_left = 25.0
offset_top = 8.0
offset_right = 487.0
offset_bottom = 499.0
script = ExtResource("1_w611t")

[node name="Address" type="Label" parent="Chat"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -39.5
offset_right = 39.5
offset_bottom = 26.0
grow_horizontal = 2
text = "Host to chat!"

[node name="JoinButton" type="Button" parent="Chat"]
layout_mode = 0
offset_left = 45.0
offset_top = 57.0
offset_right = 90.0
offset_bottom = 89.0
text = "Join
"

[node name="HostButton" type="Button" parent="Chat"]
layout_mode = 0
offset_top = 57.0
offset_right = 45.0
offset_bottom = 89.0
text = "Host"

[node name="LineEdit" type="LineEdit" parent="Chat"]
layout_mode = 0
offset_top = 26.0
offset_right = 107.0
offset_bottom = 57.0
text = "127.0.0.1 "

[node name="TextInput" type="TextEdit" parent="Chat"]
layout_mode = 0
offset_top = 89.0
offset_right = 204.0
offset_bottom = 139.0
placeholder_text = "Write something!"

[node name="TextLog" type="TextEdit" parent="Chat"]
layout_mode = 0
offset_top = 139.0
offset_right = 462.0
offset_bottom = 491.0
placeholder_text = "No one has said anything yet :'("
editable = false

[node name="SendButton" type="Button" parent="Chat"]
layout_mode = 0
offset_left = 211.0
offset_top = 91.0
offset_right = 288.0
offset_bottom = 137.0
text = "Send"

[connection signal="pressed" from="Chat/JoinButton" to="Chat" method="_on_join_pressed"]
[connection signal="pressed" from="Chat/HostButton" to="Chat" method="_on_host_pressed"]
[connection signal="pressed" from="Chat/SendButton" to="Chat" method="_on_send_pressed"]
